--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "scripts": {
     "start": "run-s start:src",
     "start:all": "run-p security-check start:src lint:watch test:watch",
-    "start:src": "node src/index.js",
-    "start:loop": "nodemon src/index.js",
+    "start:src": "node src/main.js",
+    "start:loop": "nodemon src/main.js",
     "security-check": "npm audit",
-    "lint": "esw src src buildScripts --color",
+    "lint": "esw src  --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress \"src/**/*.test.js\"",
+    "test": "mocha --use_strict --reporter progress \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "test:cov": "nyc mocha \"src/**/*.test.js\"",
     "watch": "run-p lint:watch test:watch"
@@ -35,6 +35,8 @@
   },
   "homepage": "https://github.com/Rolias/trello-helper#readme",
   "dependencies": {
+    "env-create": "^1.0.3",
+    "node-trello": "^1.3.0",
     "winston": "x"
   },
   "devDependencies": {
