--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "security-check": "npm audit",
     "lint": "esw src  --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --use_strict --reporter progress \"src/**/*.test.js\"",
+    "test": "mocha --use_strict --reporter spec \"src/**/*.test.js\"",
+    "test:int": "mocha --use_strict \"src/**/*.test.int.js\"",
     "test:watch": "npm run test -- --watch",
     "test:cov": "nyc mocha \"src/**/*.test.js\"",
-    "watch": "run-p lint:watch test:watch"
+    "watch": "run-p lint:watch test:watch",
+    "doc": "./node_modules/.bin/jsdoc -c ./jsdoc.config.json src/**/*.js ./ReadMe.md"
   },
   "repository": {
     "type": "git",
