--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/Rolias/trello-helper#readme",
   "dependencies": {
     "env-create": "^1.0.3",
+    "moment": "^2.24.0",
     "node-trello": "^1.3.0",
     "winston": "x"
   },
