--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trello-helper",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "engines": {
     "node": ">10.0.0"
   },
@@ -21,11 +21,11 @@
     "test:all": "nyc run-p test test:int",
     "watch": "run-p lint:watch test:watch",
     "doc": "./node_modules/.bin/jsdoc -c ./jsdoc.config.json main.js src/**/*.js src/*.js ./ReadMe.md",
-    "version": "npm version patch",
-    "publish": "npm publish",
+    "version": "npm version patch -m 'bump patch' ",
+    "publish": "npm publish ",
     "build:commit": "git commit --all -m 'build commit'",
     "build:push": "git push",
-    "build": "run-s lint test:cov security-check doc build:commit build:push version publish"
+    "build": "run-s lint test:cov security-check doc  build:commit version  build:commit  publish"
   },
   "repository": {
     "type": "git",
