--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trello-helper",
-  "version": "1.0.6",
+  "version": "1.0.5",
   "engines": {
     "node": ">10.0.0"
   },
@@ -21,7 +21,7 @@
     "test:all": "nyc run-p test test:int",
     "watch": "run-p lint:watch test:watch",
     "doc": "./node_modules/.bin/jsdoc -c ./jsdoc.config.json main.js src/**/*.js src/*.js ./ReadMe.md",
-    "version": "npm version patch -m 'bump patch' ",
+    "version": "npm version patch  ",
     "publish": "npm publish ",
     "build:commit": "git commit --all -m 'build commit'",
     "build:push": "git push",
