--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -2,6 +2,16 @@
   "plugins": [
     "plugins/markdown"
   ],
+  "tags": {
+    "allowUnknownTags": [
+      "usage",
+      "options?"
+    ],
+    "dictionaries": [
+      "closure",
+      "jsdoc"
+    ]
+  },
   "opts": {
     "destination": "./documentation",
     "recurse": true,
