new http request in place for get, put, post

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "security-check": "npm audit",
     "lint": "esw src  --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha  ",
-    "test:int": "mocha  \"src/**/*.test.int.js\"",
+    "test": "mocha 'src/**/*.test.js' ",
+    "test:int": "mocha  'src/**/*.test.int.js'",
     "test:watch": "npm run test -- --watch",
     "test:cov": "nyc mocha",
     "test:all": "nyc run-p  'test -- --forbid-only' 'test:int -- --forbid-only'",
