--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "esw src  --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --use_strict 'src/**/*.test.js' ",
-    "test:int": "mocha --use_strict 'src/**/*.test.int.js'",
+    "test:int": "mocha  --no-opts --use_strict 'src/**/*.int.js' ",
     "test:watch": "npm run test  -- --watch --reporter min",
     "test:cov": "nyc mocha",
     "test:all": "nyc run-p  'test -- --forbid-only' 'test:int -- --forbid-only'",
@@ -46,7 +46,6 @@
   },
   "homepage": "https://github.com/Rolias/trello-helper#readme",
   "mocha": {
-    "spec": "src/**/*.test.js",
     "verbose": true,
     "reporter": "spec"
   },
