--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "winston": "x"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/node": "^11.13.0",
+    "@types/sinon": "^7.0.11",
     "chai": "x",
     "eslint": "^5.16.0",
     "eslint-watch": "x",
