--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/sinon": "^7.0.11",
     "chai": "x",
     "eslint": "^5.16.0",
+    "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-watch": "x",
     "jsdoc": "^3.5.5",
     "mocha": "x",
