--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trello-helper",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "engines": {
     "node": ">10.0.0"
   },
@@ -65,7 +65,7 @@
     "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-watch": "x",
     "jsdoc": "^3.5.5",
-    "mocha": "x",
+    "mocha": "^6.1.3",
     "nodemon": "^1.18.10",
     "npm-run-all": "x",
     "nyc": "x",
