modify travis for code coverage reporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,13 @@ language: node_js
 node_js:
   - "10"
   - "11"
+dist: trusty
+before_script:
+  - npm -g install nyc
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter 
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - nyc --reporter=lcov npm run test
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
