--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ script:
   - nyc --reporter=lcov npm run test
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+notifications:
+  email:
+    on_failure: always
+    on_success: never
