--- a/package.json
+++ b/package.json
@@ -59,17 +59,24 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.0",
+    "@types/request-promise-native": "^1.0.16",
     "@types/sinon": "^7.0.11",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "chai": "x",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-chai-expect": "^2.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-watch": "x",
     "jsdoc": "^3.5.5",
     "mocha": "^6.1.4",
     "nodemon": "^1.18.10",
     "npm-run-all": "x",
     "nyc": "x",
-    "sinon": "^7.3.1"
+    "sinon": "^7.3.1",
+    "typescript": "^3.4.5"
   }
 }
