integration tests working

--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "description": "Simpler interface for setting and retrieving data using the Trello API",
   "main": "main.js",
   "scripts": {
-    "start": "run-s start:src",
+    "start": "run-s start:build",
     "start:all": "run-p security-check start:src lint:watch test:watch",
-    "start:src": "node src/main.js",
+    "start:build": "node build/main.js",
     "start:loop": "nodemon src/main.js",
     "security-check": "npm audit",
     "lint": "esw src  --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --use_strict 'build/**/*.test.js' ",
-    "test:int": "mocha  --no-opts --use_strict 'src/**/*.int.js' ",
+    "test:int": "mocha  --no-opts --use_strict 'build/**/*.int.js' ",
     "test:watch": "npm run test  -- --watch --reporter min",
-    "test:cov": "nyc mocha --use_strict 'src/**/*.test.js'",
-    "test:unit": "mocha --use_strict --forbid-only 'src/**/*.test.js'",
+    "test:cov": "nyc mocha --use_strict 'build/**/*.test.js'",
+    "test:unit": "mocha --use_strict --forbid-only 'build/**/*.test.js'",
     "test:all": "nyc run-p  'test -- --forbid-only' 'test:int -- --forbid-only'",
     "watch": "run-p lint:watch test:watch",
     "doc": "./node_modules/.bin/jsdoc -c ./jsdoc.config.json main.js src/**/*.js src/*.js ./ReadMe.md",
