--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "*": ["types/*"] },
     // "baseUrl": ".",
     // "paths": { "*": ["types/*"] },
     "outDir": "./build",
+    "sourceMap": true,
     // "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "checkJs": true,
-    "allowJs": true,
-    "noUnusedLocals": false,
+    "checkJs": false,
+    "allowJs": false,
+    "noUnusedLocals": true,
     "target": "es2018",
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "watch": true,
     "strictNullChecks": false
   },
@@ -18,5 +21,5 @@
   //   "mode": "modules",
   //   "out": "documentation"
   // },
-  "include": ["./**/*.*"]
+  "include": ["src/**/*"]
 }
