--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     // "baseUrl": ".",
     "outDir": "./build",
     "sourceMap": true,
-    // "declaration": true,
+    "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "checkJs": false,
@@ -21,5 +21,5 @@
   //   "mode": "modules",
   //   "out": "documentation"
   // },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "main.ts"]
 }
