set watch false

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noUnusedLocals": true,
     "target": "es2018",
     "noImplicitAny": true,
-    "watch": true,
+    "watch": false,
     "strictNullChecks": true
   },
   // "typedocOptions": {
