--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,7 @@
     // "experimentalDecorators": true,
     "paths": { "*": ["types/*"] },
     // "baseUrl": ".",
-    "outDir": "./build",
+    "outDir": "../build",
     "sourceMap": true,
     "declaration": true,
     "module": "commonjs",
@@ -21,5 +21,5 @@
   //   "mode": "modules",
   //   "out": "documentation"
   // },
-  "include": ["src/**/*", "main.ts"]
+  "include": ["./**/*"]
 }
