--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "ReadMe.md"
   ],
   "scripts": {
+    "prebuild": "rm -rf build "
     "build": "tsc -p ./src ",
     "security-check": "npm audit",
     "lint": "esw src/**/*.ts  --color",
     "lint:watch": "npm run lint -- --watch",
-    "copy:fakeCreds": "cp -f ./src/test-data/unit-test-fake-credentials.json ./build/test-data/",
-    "pretest": " run-s copy:fakeCreds ",
-    "test": "TS_NODE_PROJECT='src/tsconfig.json' mocha -r ts-node/register  'src/*.test.ts' 'src/**/*.test.ts'  --project src/tsconfig.json ",
-    "test:int": "TS_NODE_PROJECT='src/tsconfig.json' mocha -r ts-node/register --no-opts --use_strict 'src/**/*.int.ts' ",
+    "pretest": "cp -f ./src/test-data/unit-test-fake-credentials.json ./build/test-data/",
+    "setEnv": "TS_NODE_PROJECT='src/tsconfig.json'",
+    "test": "npm run setEnv mocha  ",
+    "test:int": "npm run test -- -- -g INTEGRATION 'src/**/*.int.ts'   ",
     "test:watch": "npm run test  -- --watch --watch-extensions ts --reporter min",
     "test:build": "mocha './build/*.test.js' './build/**/*.test.js' ",
-    "test:cov": "nyc mocha --use_strict 'build/**/*.test.js'",
-    "test:unit": "mocha  --forbid-only 'src/**/*.test.ts'",
+    "test:cov": "nyc npm test --silent",
+    "test:unit": "npm test --  --forbid-only ",
     "test:all": "nyc run-p  'test -- --forbid-only' 'test:int -- --forbid-only'",
     "watch": "run-p lint:watch test:watch",
     "doc": "./node_modules/.bin/jsdoc -c ./jsdoc.config.json main.js src/**/*.js src/*.js ./ReadMe.md",
@@ -40,6 +41,20 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:Rolias/trello-helper.git"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts",
+      "src/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "sourceMap": true,
+    "instrument": true
   },
   "keywords": [
     "trello",
@@ -88,6 +103,7 @@
     "nyc": "x",
     "prettier": "^1.17.0",
     "sinon": "^7.3.1",
+    "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   }
