--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   # run the test:unit which forbids only
-  - nyc --reporter=lcov npm run test
+  - nyc --reporter=lcov npm run test:build
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 notifications:
