--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
   ],
   "scripts": {
     "prebuild": "rimraf build/* ",
-    "build": "tsc -p ./src ",
+    "build": "tsc ",
     "predoc": "rimraf docs/*",
-    "doc": "typedoc --out docs --tsconfig './src/tsconfig.json'  ./src",
+    "doc": "typedoc --out docs  ./src",
     "security-check": "npm audit",
     "lint": "esw src/**/*.ts  --color",
     "lint:watch": "npm run lint -- --watch",
     "pretest": "cp -f ./src/test-data/unit-test-fake-credentials.json ./build/test-data/",
-    "setEnv": "TS_NODE_PROJECT='src/tsconfig.json'",
-    "test": "npm run setEnv mocha  ",
+    "test": "mocha",
     "test:int": "npm run test -- -- -g INTEGRATION 'src/**/*.int.ts'   ",
     "test:watch": "npm run test  -- -- --watch --watch-extensions ts --reporter min",
     "pretest:build": "npm run pretest",
