--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": { "*": ["types/*"] },
-    "outDir": "../build",
+    "rootDir": "./src",
+    "outDir": "./build",
     "module": "commonjs",
     "target": "es6",
     "sourceMap": true,
@@ -11,8 +12,10 @@
     "checkJs": false,
     "allowJs": false,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitAny": true,
     "watch": false,
+
     // "experimentalDecorators": true,
     "strictNullChecks": true
   },
