--- a/package.json
+++ b/package.json
@@ -82,32 +82,32 @@
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
-    "@types/request-promise-native": "^1.0.16",
     "winston": "x"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.0",
-    "@types/sinon": "^7.0.11",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
+    "mocha": "^6.1.4",
     "chai": "x",
+    "sinon": "^7.3.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-watch": "x",
-    "mocha": "^6.1.4",
     "nodemon": "^1.18.10",
     "npm-run-all": "x",
     "nyc": "x",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
-    "sinon": "^7.3.1",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
     "typedoc": "^0.14.2",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.0",
+    "@types/sinon": "^7.0.11",
+    "@types/request-promise-native": "^1.0.16",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0"
   }
 }
