--- a/package.json
+++ b/package.json
@@ -78,36 +78,35 @@
     "reporter": "spec"
   },
   "dependencies": {
-    "env-create": "^1.0.9",
+    "env-create": "^1.1.1",
     "moment": "^2.24.0",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
+    "request-promise-native": "^1.0.8",
     "winston": "x"
   },
   "devDependencies": {
-    "mocha": "^6.1.4",
+    "@types/chai": "^4.2.4",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.7",
+    "@types/request-promise-native": "^1.0.17",
+    "@types/sinon": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "chai": "x",
-    "sinon": "^7.3.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-chai-expect": "^2.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-watch": "x",
-    "nodemon": "^1.18.10",
+    "mocha": "^6.2.2",
     "npm-run-all": "x",
     "nyc": "x",
-    "prettier": "^1.17.0",
-    "rimraf": "^2.6.3",
-    "source-map-support": "^0.5.12",
-    "ts-node": "^8.1.0",
-    "typedoc": "^0.14.2",
-    "typescript": "^3.4.5",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.0",
-    "@types/sinon": "^7.0.11",
-    "@types/request-promise-native": "^1.0.16",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0"
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.0",
+    "sinon": "^7.5.0",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.5.0",
+    "typedoc": "^0.15.0",
+    "typescript": "^3.7.2"
   }
 }
