--- a/package.json
+++ b/package.json
@@ -85,29 +85,29 @@
     "winston": "x"
   },
   "devDependencies": {
-    "mocha": "^6.1.4",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.0",
+    "@types/request-promise-native": "^1.0.16",
+    "@types/sinon": "^7.0.11",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "chai": "x",
-    "sinon": "^7.3.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-watch": "x",
-    "nodemon": "^1.18.10",
+    "eslint-watch": "^7.0.0",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.7",
     "npm-run-all": "x",
     "nyc": "x",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
+    "sinon": "^7.3.1",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
-    "typedoc": "^0.14.2",
-    "typescript": "^3.4.5",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.0",
-    "@types/sinon": "^7.0.11",
-    "@types/request-promise-native": "^1.0.16",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0"
+    "typedoc": "^0.20.36",
+    "typescript": "^3.4.5"
   }
 }
